--- a/menu-page/menu.html
+++ b/menu-page/menu.html
@@ -22,10 +22,10 @@
             <a href="../home-page/index.html"><img src="../heaven/icons8-paw-prints-48.png" alt="logo"></a>
             <div class="navLinks">
                     <ul>  
-                            <li><a href="../index.html">HOME</a></li>
-                            <li><a href="../cat-profilecat.html">CAT PROFILE</a></li>
-                            <li><a href="../menu-pagemenu.html">MENU</a></li>
-                            <li><a href="../FAQ-pagefaq.html">FAQ</a></li>
+                            <li><a href="/index.htm">HOME</a></li>
+                            <li><a href="/cat-profile/cat.html">CAT PROFILE</a></li>
+                            <li><a href="/menu-page/menu.html">MENU</a></li>
+                            <li><a href="/FAQ-page/faq.html">FAQ</a></li>
                     </ul>
             </div>
         </nav>
